Implemented admin APIs for managing hotels, bookings, inventory, user profiles and added Swagger UI for API documentation